Bug 466145 - Spectacle uses last used delay for screenshots triggered by shortcuts
Summary: Spectacle uses last used delay for screenshots triggered by shortcuts
Status: RESOLVED FIXED
Alias: None
Product: Spectacle
Classification: Applications
Component: General (other bugs)
Version First Reported In: git-master
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Boudhayan Gupta
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-02-20 14:45 UTC by David Redondo
Modified: 2023-02-24 23:45 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description David Redondo 2023-02-20 14:45:03 UTC
STEPS TO REPRODUCE
1. open spectacle
2. set a delay
3. close spectacle
4. press print screen or other shortcut


OBSERVED RESULT
spectacle opens/notification is shown after the delay


EXPECTED RESULT
spectacle should open instantlly

ADDITIONAL INFORMATION
Suspecting https://invent.kde.org/graphics/spectacle/-/commit/2fa54e68c05f271b0d00863d8bbc6de69f4105d0 to have broken this
Comment 1 Bug Janitor Service 2023-02-24 04:22:36 UTC
A possibly relevant merge request was started @ https://invent.kde.org/graphics/spectacle/-/merge_requests/206
Comment 2 Noah Davis 2023-02-24 23:45:09 UTC
Git commit 419a594085604df4c17459b920456fd1c196b282 by Noah Davis.
Committed on 24/02/2023 at 23:15.
Pushed by ndavis into branch 'master'.

Never use delay at startup unless used via CLI

M  +21   -21   src/SpectacleCore.cpp

https://invent.kde.org/graphics/spectacle/commit/419a594085604df4c17459b920456fd1c196b282