Never use delay at startup unless used via CLI

BUG: 466145